--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="me.jpg" width='275' height='275' alt="Fabio O'Ryan-Paulo profile picture"></td>
+      <td><img src="Me.jpg" width='275' height='275' alt="Fabio O'Ryan-Paulo profile picture"></td>
       <td>
         <h1>Fabio O'Ryan-Paulo</h1>
         <p><em><strong>UCT </strong>BSc Undergraduate</em></p>
